set up static files access for layouts and pages

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,18 +1,5 @@
-<html>
-    <head>
-        <title>
-            <%= title %>
-        </title>
-    </head>
-    
-    <body>
-        <!-- udsing partial -->
-        <%- include('_header'); %>
+ 
 
-        <h1>Codeial / <%= title %> </h1>
+        <h1>Codeial Abahy / <%= title %> </h1>
 
-        <%- include('_footer'); %>
-    </body>
-
-    
-</html>
+       
