--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,17 +1,6 @@
-<html>
-    <head>
-        <title>
-            <%= title %>
-        </title>
-    </head>
-
-    <body>
-        <!-- patial -->
-        <%- include('_header'); %>
+ <link rel="stylesheet" href="/css/user_profile.css">
 
         <h1>Codeial / <%= title %> </h1>
 
-        <%- include('_footer'); %>
-    </body>
-
-</html>
+ 
+ 
