--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -4,4 +4,23 @@
  
 <header>
     Page Header !
+
+    <!-- adding the items of authentication items -->
+    <ul style="list-style: none;">
+        <% if (locals.user){ %>
+            <li>
+                <a href="/user/profile"><%= user.name %></li></a>
+            <li>
+                <a href="/user/sign-out">Sign Out</a>
+            </li>
+
+        <% }else{ %>
+            <li>
+                <a href="/user/sign-in">Sign In</a>
+            </li>
+            <li>
+                <a href="/user/sign-up">Sign Up</a>
+            </li>
+        <% } %>
+    </ul>
 </header>
