Added Sass ad decorated the page

--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -3,5 +3,9 @@
 <!-- to add this header in the home.ejs or user.ejs we will include this in the home.ejs file-->
  
 <footer>
-    Page footer !
+    <div id="footer-container">
+        <div id="fo-list1"><p>@codeial.com</p></div>
+        <div id="fo-list2"><a href="/"><p>Home page</p></a></div>
+    </div>
+     
 </footer>
