--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,6 +5,8 @@
         </title>
 
         <link rel="stylesheet" href="/css/layout.css">
+        <link rel="stylesheet" href="/css/header.css">
+        <link rel="stylesheet" href="/css/footer.css">
     
         <!--using <%- style %> : if there is any style tage in the body it will atuomaticallly put it here  -->
         <%- style %>
@@ -17,7 +19,9 @@
 
         <!-- body contains the  variable part which would keep on changing as we switch the page -->
         <!-- here the body will contains the home.ejs or user_profile.ejs file whichever we will search on server -->
-        <%- body %>
+       <main id="layout-main">
+         <%- body %>
+       </main>
 
         <%- include('_footer'); %>
 
