--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -5,10 +5,10 @@ footer{
     // background-color: transparent;
     #footer-container{
         display: flex;
-        border: 1px solid black;
+        // border: 1px solid black;
         
         div{
-            border: 1px solid black;
+            // border: 1px solid black;
             margin-left: 5px;    
         
             a{
