--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -4,7 +4,7 @@ header{
     background-color: rgb(121, 207, 253);
     color: white;
     div{
-        border: solid 1px black; 
+        // border: solid 1px black; 
         
        
     }
