--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,10 +4,14 @@
 
 <section id="feed-posts">
         <h4>Post</h4>
+        <!-- ristricting the form to be visible to an anonymous user , So that an anonymous user can't post comment , it will be displayed to only that user who have signed in -->
+        <% if(locals.user){ %>
         <form action="/posts/create" id="new-post-form" method="POST">
                 <textarea name="content" cols="30" rows="3" placeholder="Type Here..."></textarea>
                 <input type="submit" value="Post">
         </form>
+                
+        <% } %>
         
 
         <div id="posts-list-container">
