--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
         <!-- ristricting the form to be visible to an anonymous user , So that an anonymous user can't post comment , it will be displayed to only that user who have signed in -->
         <% if(locals.user){ %>
         <form action="/posts/create" id="new-post-form" method="POST">
-                <textarea name="content" cols="30" rows="3" placeholder="Type Here..."></textarea>
+                <textarea name="content" cols="30" rows="3" placeholder="Type Here..." required></textarea>
                 <input type="submit" value="Post">
         </form>
                 
@@ -29,12 +29,28 @@
                     <div class="post-comments">
                         <!-- check for authentication visible to only authenticated user only -->
                         <% if(locals.user){ %>
+                                
                                 <form action="/comments/create" method="POST">
-                                        <input type="text" name="content" placeholder="Type Here to add comment...">
+                                        <input type="text" name="content" placeholder="Type Here to add comment..." required>
                                         <input type="hidden" name="post" value="<%= post._id %>">
                                         <input type="submit"  value="Add Comment"> 
                                 </form>
                         <% } %>
+
+                        <!-- loading the comments -->
+                        <div class="post-comments-list">
+                                <ul id="post-comments-<%= post._id %>">
+                                        <% for(comment of post.comments){ %>
+                                                <p>
+                                                        <%= comment.content %>
+                                                        <br>
+                                                        <small>
+                                                                <%= comment.user.name %>
+                                                        </small>
+                                                </p>
+                                        <% } %>
+                                </ul>
+                        </div>
                         
                     </div>
                  </li>
