Deleting the Comment also removing the reference id of the comment from the Post

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -21,6 +21,7 @@
                 <% for(post of posts){ %>
                  <li>
                     <p>
+                        <!-- for deleting the post -->
                         <% if(locals.user && locals.user.id == post.user.id) { %>
                         <small>
                                 <a href="/posts/destroy/<%= post.id %>">X</a>
@@ -47,6 +48,12 @@
                                 <ul id="post-comments-<%= post._id %>">
                                         <% for(comment of post.comments){ %>
                                                 <p>
+                                                        <!-- for deleting the comments -->
+                                                        <% if(locals.user && locals.user.id == comment.user.id ) { %>
+                                                                <small>
+                                                                        <a href="/comments/destroy/<%= comment.id %>">X</a>
+                                                                </small>
+                                                                <% } %>
                                                         <%= comment.content %>
                                                         <br>
                                                         <small>
