--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -1,17 +1,10 @@
-// body{
-//     margin: 0;
-//     text-align: center;
-//     height: 100%;
-
-//     #layout-main{
-//         height: 100%;
-//     }
-// }
+ 
 body{
     text-align: center;
     margin: 0;
-    
+
     #layout-main{
-        height: 100%;
+       min-height: 100%;
+         
     }
 }
