--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,53 +19,8 @@
            <ul style="list-style:none;">
                 <!-- traversing over the posts data base -->
                 <% for(post of posts){ %>
-                 <li>
-                    <p>
-                        <!-- for deleting the post -->
-                        <% if(locals.user && locals.user.id == post.user.id) { %>
-                        <small>
-                                <a href="/posts/destroy/<%= post.id %>">X</a>
-                        </small>
-                        <% } %>
-                      <%= post.content %>
-                      <br>
-                      <small><%= post.user.name %></small>
-                    </p>
-                    <!-- for comment section creating the comment -->
-                    <div class="post-comments">
-                        <!-- check for authentication visible to only authenticated user only -->
-                        <% if(locals.user){ %>
-                                
-                                <form action="/comments/create" method="POST">
-                                        <input type="text" name="content" placeholder="Type Here to add comment..." required>
-                                        <input type="hidden" name="post" value="<%= post._id %>">
-                                        <input type="submit"  value="Add Comment"> 
-                                </form>
-                        <% } %>
-
-                        <!-- loading the comments from the data base to the screen -->
-                        <div class="post-comments-list">
-                                <ul id="post-comments-<%= post._id %>">
-                                        <% for(comment of post.comments){ %>
-                                                <p>
-                                                        <!-- for deleting the comments -->
-                                                        <% if(locals.user && locals.user.id == comment.user.id ) { %>
-                                                                <small>
-                                                                        <a href="/comments/destroy/<%= comment.id %>">X</a>
-                                                                </small>
-                                                                <% } %>
-                                                        <%= comment.content %>
-                                                        <br>
-                                                        <small>
-                                                                <%= comment.user.name %>
-                                                        </small>
-                                                </p>
-                                        <% } %>
-                                </ul>
-                        </div>
-                        
-                    </div>
-                 </li>
+                 
+                        <%- include('_post') -%>
                 <% } %>
                 
             </ul>
