--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -2,8 +2,20 @@
 
         <h1>Codeial / <%= title %> </h1>
 
-        <p><%= profile_user.name%></p>
-        <p><%= profile_user.email%></p>
+        
 
  
- 
+        <!-- Updating a Users Id -->
+ <% if(user.id == profile_user.id){%>
+       <!-- If the user matches show the form -->
+       <form action="/user/update/<%= profile_user.id%>" method="POST">
+              <input type="text" name="name" placeholder="Your Name" value="<%= profile_user.name%>">
+              <input type="email" name="email" placeholder="Your Email" value="<%= profile_user.email%>">
+              <input type="submit" value="Update">
+       </form>
+
+       <% }else{ %>
+              <!-- else show only the profile info -->
+       <p><%= profile_user.name%></p>
+        <p><%= profile_user.email%></p>
+       <% } %>
