--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,39 +1,42 @@
  
 <!-- <link rel="stylesheet" href="/css/layout.css"> -->
 
-<h1>Codeial Abahy / <%= title %> </h1>
+ <link rel="stylesheet" href="/css/home.css">
 
-<section id="feed-posts">
-        <h4>Post</h4>
-        <!-- ristricting the form to be visible to an anonymous user , So that an anonymous user can't post comment , it will be displayed to only that user who have signed in -->
-        <% if(locals.user){ %>
-        <form action="/posts/create" id="new-post-form" method="POST">
-                <textarea name="content" cols="30" rows="3" placeholder="Type Here..." required></textarea>
-                <input type="submit" value="Post">
-        </form>
-                
-        <% } %>
-        
-
-        <div id="posts-list-container">
-           <ul style="list-style:none;">
-                <!-- traversing over the posts data base -->
-                <% for(post of posts){ %>
-                 
-                        <%- include('_post') -%>
+<div id="home-container">
+        <section id="feed-posts">
+                <h4>Post</h4>
+                <!-- ristricting the form to be visible to an anonymous user , So that an anonymous user can't post comment , it will be displayed to only that user who have signed in -->
+                <% if(locals.user){ %>
+                <form action="/posts/create" id="new-post-form" method="POST">
+                        <textarea name="content" cols="30" rows="3" placeholder="Type Here..." required></textarea>
+                        <input type="submit" value="Post">
+                </form>
+                        
                 <% } %>
                 
-            </ul>
-        </div>
-</section>
+        
+                <div id="posts-list-container">
+                   <ul style="list-style:none;">
+                        <!-- traversing over the posts data base -->
+                        <% for(post of posts){ %>
+                         
+                                <%- include('_post') -%>
+                        <% } %>
+                        
+                    </ul>
+                </div>
+        </section>
+        
+        <!-- TO  Show the list of user-->
+        <section id="user-friends">
+                <h4>Friends</h4>
+                <% for(u of all_users) { %>
+                    <p>
+                        <!-- creating an anchor tag of the user so when we will click on any particular user it will redirect us to that user profile (/user/profile/<%= u.id%>) -->
+                        <a href="/user/profile/<%= u.id %>"><%= u.name %></a>
+                    </p>
+               <% } %>
+        </section>
+</div>
 
-<!-- TO  Show the list of user-->
-<section id="user-friends">
-        <h4>Friends</h4>
-        <% for(u of all_users) { %>
-            <p>
-                <!-- creating an anchor tag of the user so when we will click on any particular user it will redirect us to that user profile (/user/profile/<%= u.id%>) -->
-                <a href="/user/profile/<%= u.id %>"><%= u.name %></a>
-            </p>
-       <% } %>
-</section>
