corrected the header section profile , previously on clicking the NAme present in the header was giing error correted that

--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -13,7 +13,7 @@
                 <% if (locals.user){ %>
                     <div>
                     <li>
-                        <a href="/user/profile"><%= user.name %></a>
+                        <a href="/user/profile/<%= user.id %>"><%= user.name %></a>
                     </li>
                     </div>
 
