Creating a Post:: Sending Data

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,8 +8,12 @@
         <link rel="stylesheet" href="/css/header.css">
         <link rel="stylesheet" href="/css/footer.css">
 
+        <!-- for notification flash message -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
+
+        <!-- Jquery Cdn:    https://cdnjs.com/libraries/jquery -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     
         <!--using <%- style %> : if there is any style tage in the body it will atuomaticallly put it here  -->
         <%- style %>
