--- a/views/_comment.ejs
+++ b/views/_comment.ejs
@@ -1,4 +1,4 @@
-<li style="list-style: none;">
+<li id="comment-<%= comment._id %>" style="list-style: none;">
     <p>
         <!-- for deleting the comments -->
         <% if(locals.user && locals.user.id == comment.user.id ) { %>
