--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -1,4 +1,4 @@
-<li id="post-<%= post._id%>">
+<li id="post-<%= post._id %>">
     <p>
         <!-- for deleting the post -->
         <% if(locals.user && locals.user.id == post.user.id) { %>
@@ -15,7 +15,7 @@
         <!-- check for authentication visible to only authenticated user only -->
         <% if(locals.user){ %>
                 
-                <form action="/comments/create" method="POST">
+                <form action="/comments/create" class="new-comment-form" id="post-<%= post._id %>-comments-form" method="POST">
                         <input type="text" name="content" placeholder="Type Here to add comment..." required>
                         <input type="hidden" name="post" value="<%= post._id %>">
                         <input type="submit"  value="Add Comment"> 
@@ -35,3 +35,5 @@
         
     </div>
  </li>
+
+ <script src="/js/post_comments.js"></script>
